Fix spacing inbetween expenses

--- a/pleo/src/App.css
+++ b/pleo/src/App.css
@@ -122,6 +122,7 @@ button {
 
 .expenseItem {
     position: relative;
+    margin-bottom: 10px;
     width: 500px;
     height: 50px;
     border: solid 0.1px #d4d4d4;
